@@ -239,8 +239,9 @@ None.
     for export (-e option); note that -e is implicit in the 'load' and
     'reload' commands.
 
-2)  When 'trace' is specified on a command that involves the compiler, 
-    the compiler now creates a trace to standard output.
+2)  When 'trace' is specified on a command that involves the compiler
+    (e.g., shorewall trace check), the compiler now creates a trace to
+    standard output.
 
     Trace entries are of three types:
 
